c4prj2_input/grade.txt
Grading at Sat 07 Oct 2023 01:24:06 PM UTC
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:11:10: error: unused variable ‘count’ [-Werror=unused-variable]
   11 |   size_t count = 0;
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
